--- a/package.xml
+++ b/package.xml
@@ -24,5 +24,6 @@
 		<instruction type="option">options.xml</instruction>
 		<instruction type="bbcode">bbcodes.xml</instruction>
 		<instruction type="smiley">smilies.xml</instruction>
+		<instruction type="templateListener">templateListener.xml</instruction>
 	</instructions>
 </package>
