--- a/package.xml
+++ b/package.xml
@@ -20,7 +20,7 @@
 		<instruction type="packageInstallationPlugin">pip.xml</instruction>
 		<instruction type="file">files.tar</instruction>
 		<instruction type="template">templates.tar</instruction>
-		<instruction type="acptemplate">acptemplates.tar</instruction>
+		<instruction type="acpTemplate">acptemplates.tar</instruction>
 		<instruction type="sql">install.sql</instruction>
 		<instruction type="language">language/*.xml</instruction>
 		<instruction type="option">options.xml</instruction>
